--- a/WizardSchoolSignUpUIKit/WizardSchoolSignUpUIKit/Base.lproj/Main.storyboard
+++ b/WizardSchoolSignUpUIKit/WizardSchoolSignUpUIKit/Base.lproj/Main.storyboard
@@ -18,86 +18,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Jzn-Dk-vYh">
-                                <rect key="frame" x="24" y="136" width="366" height="118"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d30-yb-dz2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CF5-YE-XEU">
-                                        <rect key="frame" x="0.0" y="0.0" width="366" height="34"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Jzn-Dk-vYh">
+                                        <rect key="frame" x="24" y="48" width="366" height="118"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PC7-Ms-Pvl">
-                                                <rect key="frame" x="0.0" y="-2" width="25" height="38"/>
-                                                <imageReference key="image" image="person.circle" catalog="system" symbolScale="large"/>
-                                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
-                                            </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Okd-WQ-AeS">
-                                                <rect key="frame" x="33" y="0.0" width="333" height="34"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CF5-YE-XEU">
+                                                <rect key="frame" x="0.0" y="0.0" width="366" height="34"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PC7-Ms-Pvl">
+                                                        <rect key="frame" x="0.0" y="-2" width="25" height="38"/>
+                                                        <imageReference key="image" image="person.circle" catalog="system" symbolScale="large"/>
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Okd-WQ-AeS">
+                                                        <rect key="frame" x="33" y="0.0" width="333" height="34"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="Okd-WQ-AeS" secondAttribute="trailing" id="hKo-Ik-ACK"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="azy-8j-5nS">
+                                                <rect key="frame" x="0.0" y="42" width="366" height="34"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ir1-0F-6T5">
+                                                        <rect key="frame" x="0.0" y="-2" width="25" height="38"/>
+                                                        <imageReference key="image" image="lock.circle" catalog="system" symbolScale="large"/>
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default" weight="medium"/>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ysx-VQ-Kof">
+                                                        <rect key="frame" x="33" y="0.0" width="333" height="34"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="Ysx-VQ-Kof" secondAttribute="trailing" id="6gp-uw-lXm"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KQt-ln-1qC">
+                                                <rect key="frame" x="0.0" y="84" width="366" height="34"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iGt-uH-cpX">
+                                                        <rect key="frame" x="0.0" y="-2" width="25" height="38"/>
+                                                        <imageReference key="image" image="lock.circle" catalog="system" symbolScale="large"/>
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xai-Tg-c0L">
+                                                        <rect key="frame" x="33" y="0.0" width="333" height="34"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="Xai-Tg-c0L" secondAttribute="trailing" id="ndy-5K-f4j"/>
+                                                </constraints>
+                                            </stackView>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Okd-WQ-AeS" secondAttribute="trailing" id="hKo-Ik-ACK"/>
-                                        </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="azy-8j-5nS">
-                                        <rect key="frame" x="0.0" y="42" width="366" height="34"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ir1-0F-6T5">
-                                                <rect key="frame" x="0.0" y="-2" width="25" height="38"/>
-                                                <imageReference key="image" image="lock.circle" catalog="system" symbolScale="large"/>
-                                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default" weight="medium"/>
-                                            </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ysx-VQ-Kof">
-                                                <rect key="frame" x="33" y="0.0" width="333" height="34"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBv-UF-OQd">
+                                        <rect key="frame" x="24" y="198" width="366" height="50"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Ysx-VQ-Kof" secondAttribute="trailing" id="6gp-uw-lXm"/>
+                                            <constraint firstAttribute="height" constant="50" id="B6Z-Tt-7UX"/>
                                         </constraints>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KQt-ln-1qC">
-                                        <rect key="frame" x="0.0" y="84" width="366" height="34"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iGt-uH-cpX">
-                                                <rect key="frame" x="0.0" y="-2" width="25" height="38"/>
-                                                <imageReference key="image" image="lock.circle" catalog="system" symbolScale="large"/>
-                                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
-                                            </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xai-Tg-c0L">
-                                                <rect key="frame" x="33" y="0.0" width="333" height="34"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Xai-Tg-c0L" secondAttribute="trailing" id="ndy-5K-f4j"/>
-                                        </constraints>
-                                    </stackView>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
                                 </subviews>
-                            </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBv-UF-OQd">
-                                <rect key="frame" x="24" y="286" width="366" height="50"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="B6Z-Tt-7UX"/>
+                                    <constraint firstItem="UBv-UF-OQd" firstAttribute="leading" secondItem="d30-yb-dz2" secondAttribute="leading" constant="24" id="3je-UG-jeu"/>
+                                    <constraint firstItem="Jzn-Dk-vYh" firstAttribute="top" secondItem="d30-yb-dz2" secondAttribute="top" constant="48" id="9IU-nC-dYj"/>
+                                    <constraint firstAttribute="trailing" secondItem="Jzn-Dk-vYh" secondAttribute="trailing" constant="24" id="GH6-o0-egc"/>
+                                    <constraint firstAttribute="trailing" secondItem="UBv-UF-OQd" secondAttribute="trailing" constant="24" id="I9X-6r-zxX"/>
+                                    <constraint firstItem="Jzn-Dk-vYh" firstAttribute="centerX" secondItem="d30-yb-dz2" secondAttribute="centerX" id="mbQ-HX-9bX"/>
+                                    <constraint firstAttribute="bottom" secondItem="UBv-UF-OQd" secondAttribute="bottom" id="rF6-QW-aQE"/>
+                                    <constraint firstItem="UBv-UF-OQd" firstAttribute="top" secondItem="Jzn-Dk-vYh" secondAttribute="bottom" constant="32" id="uBf-nP-RIW"/>
+                                    <constraint firstItem="Jzn-Dk-vYh" firstAttribute="leading" secondItem="d30-yb-dz2" secondAttribute="leading" constant="24" id="zdd-DS-8wf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Jzn-Dk-vYh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="48" id="2Gf-0f-E85"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UBv-UF-OQd" secondAttribute="trailing" constant="24" id="9dB-bD-oSc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jzn-Dk-vYh" secondAttribute="trailing" constant="24" id="M5b-WH-Pnu"/>
-                            <constraint firstItem="UBv-UF-OQd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="WZd-du-bOe"/>
-                            <constraint firstItem="Jzn-Dk-vYh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="oJg-De-xM8"/>
-                            <constraint firstItem="UBv-UF-OQd" firstAttribute="top" secondItem="Jzn-Dk-vYh" secondAttribute="bottom" constant="32" id="t5z-Tp-Sjy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d30-yb-dz2" secondAttribute="trailing" id="3P2-p3-SvA"/>
+                            <constraint firstItem="d30-yb-dz2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5h5-sW-cfN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="d30-yb-dz2" secondAttribute="bottom" id="6N3-RK-0Sf"/>
+                            <constraint firstItem="d30-yb-dz2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="N8G-JO-eZp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="RHM-Qg-0u4"/>
